--- a/views/layouts/layout.handlebars
+++ b/views/layouts/layout.handlebars
@@ -3,9 +3,14 @@
 <head>
   <meta charset="UTF-8">
   <link rel="stylesheet" href="/style.css">
-  <title>An Example Website</title>
+  <title>10Kind</title>
 </head>
 <body>
+  <header>
+    <div class="header">
+      <h1>10Kind</h1>
+    </div>
+  </header>
 {{{body}}}
 </body>
 </html>
