--- a/views/people.handlebars
+++ b/views/people.handlebars
@@ -1,1 +1,5 @@
-<p>Name: {{name}}</p>
+<h2>Day {{name}}</h2>
+<p>This should pull in daily tasks!</p>
+<div class="button">
+    <button type="button">I did it!</button>
+</div>
