--- a/public/style.css
+++ b/public/style.css
@@ -1,3 +1,47 @@
 body {
-    background-color: red;
+    font-family: 'Lato', sans-serif;
+    font-size: 20px;
+    letter-spacing: 0.1em;
+    margin: 0;
+    text-align: center;
+}
+
+.header {
+    background-color: #2196F3;
+    padding: 8px;
+}
+
+h1 {
+    text-transform: uppercase;
+    color: white;
+    font-weight: 300;
+    letter-spacing: 0.1em;
+}
+
+h2 {
+    padding-top: 70px;
+    color: #1565C0;
+    font-size: 30px;
+    text-transform: uppercase;
+}
+
+p {
+    color: #212121;
+    padding: 2% 0 80px 0;
+}
+
+button {
+    text-transform: uppercase;
+    font-family: 'Lato', sans-serif;
+    padding: 25px 65px;
+    font-size: 28px;
+    color: white;
+    border-color: #FF5252;
+    background-color: #FF5252;
+    box-shadow: none;
+    letter-spacing: 0.2em;
+}
+
+.button {
+    text-align: center;
 }
