--- a/views/tasks.handlebars
+++ b/views/tasks.handlebars
@@ -1,4 +1,4 @@
-<h2>Day {{name}}</h2>
+<h2>{{description}}</h2>
 <p>This should pull in daily tasks!</p>
 <div class="button">
     <button type="button">I did it!</button>
