Extra stuff after meeting with David

--- a/views/home.handlebars
+++ b/views/home.handlebars
@@ -1,4 +1,15 @@
-<p>Day by day, helping you bring more joy to your life</p>
+<h2>Day by day, helping you bring more joy to your life</h2>
+<p>Let's get started!</p>
+
+<form>
+    <p>Username    
+        <input type="text" name="username" maxlength="30" />
+    </p>
+    <p>Password
+        <input type="password" name="password" maxlength="30" />
+    </p>
+</form>
+
 <div class="button">
-    <button type="button">Login with Facebook</button>
+    <button type="button">Create Account</button>
 </div>
