--- a/views/tasks.handlebars
+++ b/views/tasks.handlebars
@@ -1,5 +1,5 @@
-<h2>{{description}}</h2>
-<p>This should pull in daily tasks!</p>
+<h2>Today I challenge you to...</h2>
+<p>{{description}}</p>
 <form method="POST">
     <input type="hidden" name="task_id" value="{{task_id}}">
     <div class="button">
