button clicks work

--- a/views/home.handlebars
+++ b/views/home.handlebars
@@ -11,5 +11,5 @@
 </form>
 
 <div class="button">
-    <button type="button">Create Account</button>
+    <button type="button" onclick="window.location.href='/tasks'" >Create Account</button>
 </div>
