--- a/views/tasks.handlebars
+++ b/views/tasks.handlebars
@@ -8,7 +8,7 @@
         </div>
     {{else}}
         <div class="button">
-            <button type="submit">I did it!</button>
+            <button type="submit" onclick="window.location.href='/progress'" >I did it!</button>
         </div>
     {{/if}}
 </form>
